--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.23.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "next": "12.3.1",
+    "next-with-less": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
